# CURSED_WORK

./: CMakeCache.txt  CMakeDirectoryInformation.cmake  CMakeLists.txt  Makefile  Makefile.cmake  Makefile2  README.md  TargetDirectories.txt  Zaitsevs_cursed_project.cbp  build.ninja  clion-Debug-log.txt  cmake_install.cmake  logs.txt  main.cpp
Comparators/: compare_keys.cpp  compare_keys.h  compare_strings.cpp  compare_strings.h
Data_Types/: allocator_types.h  data_type.h
Data_structures/: data_collection.cpp  data_collection.h  database.cpp  database.h  pool.cpp  pool.h  scheme.cpp  scheme.h
Logger/: builder.h  builder_impl.cpp  builder_impl.h
Memory_Alloc/: border_descriptors_alloc.cpp  border_descriptors_alloc.h  buddy_alloc.cpp  buddy_alloc.h  global_heap_alloc.cpp  global_heap_alloc.h  hold_memory.cpp  hold_memory.h  memory.cpp  memory.h  sorted_list_alloc.cpp  sorted_list_alloc.h
Request_Handler/: command.cpp  command.h  command_add_collection.cpp  command_add_collection.h  command_add_data.cpp  command_add_data.h  command_add_pool.cpp  command_add_pool.h  command_add_scheme.cpp  command_add_scheme.h  command_get_data.cpp  command_get_data.h  command_get_data_between.cpp  command_get_data_between.h  command_remove_collection.cpp  command_remove_collection.h  command_remove_data.cpp  command_remove_data.h  command_remove_pool.cpp  command_remove_pool.h  command_remove_scheme.cpp  command_remove_scheme.h  command_update_data.cpp  command_update_data.h  handler.h  request_handler_with_command.cpp  request_handler_with_command.h  request_handler_with_command_chain.cpp  request_handler_with_command_chain.h
Test/: test_data.txt
Trees/: associative_container.h  binary_search_tree.h  (+1 more)
(+50 files in other folders)
